added sig to top of files to show I wrote them

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,6 @@
-
+/*
+    CREATED AND WRITTEN BY STEVE WELBORN
+*/
 /* Navbar 
 .navbar .container, .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
     display: flex;
